--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
         "protobufjs": "^6.8.0",
         "randombytes": "^2.0.6",
         "typedarray-to-buffer": "^3.1.0",
+        "typescript-collections": "^1.3.2",
         "uuid": "^3.2.1"
     }
 }
