--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "lint": "tslint -t codeFrame './**/*.ts' 'test/**/*.ts'",
         "prebuild": "rimraf dist",
-        "test": "jest",
+        "test": "rm -rf test-repos/ && jest",
         "test:watch": "jest --watch",
         "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
         "deploy-docs": "ts-node tools/gh-pages-publish",
@@ -40,8 +40,11 @@
     },
     "jest": {
         "transform": {
-            ".(ts|tsx)": "../../node_modules/ts-jest/preprocessor.js"
+            ".+\\.tsx?$": "ts-jest"
         },
+        "transformIgnorePatterns": [
+            "(!@aperturerobotics)"
+        ],
         "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
         "moduleFileExtensions": [
             "ts",
@@ -56,6 +59,7 @@
             "/packages/pbobject/",
             "/packages/objectenc/",
             "/packages/objectsig/",
+            "/packages/timestamp/",
             "/packages/storageref/"
         ],
         "coverageThreshold": {
@@ -72,8 +76,8 @@
     "devDependencies": {
         "@types/es6-promise": "^3.3.0",
         "@types/ipfs": "https://github.com/zabirauf/ipfs-types/archive/aef66519bd24036b706844e96378dcfecab54185/ipfs-types.tar.gz",
-        "@types/jest": "^21.1.0",
-        "@types/node": "^8.0.0",
+        "@types/jest": "^22.1.0",
+        "@types/node": "^9.4.5",
         "colors": "^1.1.2",
         "commitizen": "^2.9.6",
         "coveralls": "^3.0.0",
@@ -81,18 +85,16 @@
         "cz-conventional-changelog": "^2.0.0",
         "husky": "^0.14.0",
         "lint-staged": "^6.0.0",
-        "lodash.camelcase": "^4.3.0",
         "prettier": "^1.4.4",
         "prompt": "^1.0.0",
-        "replace-in-file": "^3.0.0-beta.2",
         "rimraf": "^2.6.1",
         "ts-jest": "^22.0.0",
         "ts-node": "^4.0.1",
         "tslint": "^5.4.3",
         "tslint-config-prettier": "^1.1.0",
         "tslint-config-standard": "^7.0.0",
-        "typedoc": "^0.9.0",
-        "typescript": "^2.3.4",
+        "typedoc": "^0.10.0",
+        "typescript": "^2.6.2",
         "validate-commit-msg": "^2.12.2"
     },
     "dependencies": {
@@ -101,7 +103,7 @@
         "buffer": "^5.0.8",
         "elliptic": "^6.4.0",
         "ipfs": "^0.27.7",
-        "libp2p-crypto": "^0.11.0",
+        "libp2p-crypto": "^0.12.0",
         "multihashes": "^0.4.13",
         "multihashing": "^0.3.2",
         "node-webcrypto-ossl": "^1.0.33",
