--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "author": "Christian Stewart <christian@paral.in>",
     "repository": {
         "type": "git",
-        "url": "git@github.com:aperturerobotics/objectsig-js.git"
+        "url": "git@github.com:aperturerobotics/inca-js.git"
     },
     "engines": {
         "node": ">=6.0.0"
     },
     "scripts": {
+        "build": "tsc && ./hack/copy_pb.bash",
         "lint": "tslint -t codeFrame './**/*.ts' 'test/**/*.ts'",
         "prebuild": "rimraf dist",
         "test": "rm -rf test-repos/ && jest",
@@ -24,7 +25,7 @@
         "precommit": "lint-staged"
     },
     "lint-staged": {
-        "{src,test}/**/*.ts": [
+        "**/*.ts": [
             "prettier --write --no-semi --single-quote",
             "git add"
         ]
@@ -40,11 +41,8 @@
     },
     "jest": {
         "transform": {
-            ".+\\.tsx?$": "ts-jest"
+            ".(ts|tsx)": "../../node_modules/ts-jest/preprocessor.js"
         },
-        "transformIgnorePatterns": [
-            "(!@aperturerobotics)"
-        ],
         "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
         "moduleFileExtensions": [
             "ts",
@@ -54,13 +52,7 @@
         "coveragePathIgnorePatterns": [
             "/node_modules/",
             "/test/",
-            "/src/pb/",
-            "/packages/objstore/",
-            "/packages/pbobject/",
-            "/packages/objectenc/",
-            "/packages/objectsig/",
-            "/packages/timestamp/",
-            "/packages/storageref/"
+            "/pb/"
         ],
         "coverageThreshold": {
             "global": {
@@ -77,6 +69,7 @@
         "@types/es6-promise": "^3.3.0",
         "@types/ipfs": "https://github.com/zabirauf/ipfs-types/archive/aef66519bd24036b706844e96378dcfecab54185/ipfs-types.tar.gz",
         "@types/jest": "^22.1.0",
+        "@types/long": "^3.0.32",
         "@types/node": "^9.4.5",
         "colors": "^1.1.2",
         "commitizen": "^2.9.6",
@@ -93,24 +86,22 @@
         "tslint": "^5.4.3",
         "tslint-config-prettier": "^1.1.0",
         "tslint-config-standard": "^7.0.0",
-        "typedoc": "^0.10.0",
         "typescript": "^2.6.2",
         "validate-commit-msg": "^2.12.2"
     },
     "dependencies": {
         "@aperturerobotics/pbobject": "^0.2.0",
+        "@aperturerobotics/storageref": "^0.0.0",
         "arraybuffer-equal": "^1.0.4",
         "buffer": "^5.0.8",
         "elliptic": "^6.4.0",
         "ipfs": "^0.27.7",
         "libp2p-crypto": "^0.12.0",
-        "multihashes": "^0.4.13",
-        "multihashing": "^0.3.2",
         "node-webcrypto-ossl": "^1.0.33",
         "peer-id": "^0.10.5",
         "protobufjs": "^6.8.0",
         "randombytes": "^2.0.6",
-        "typedarray-to-buffer": "^3.1.0",
+        "typedarray-to-buffer": "^3.1.2",
         "typescript-collections": "^1.3.2",
         "uuid": "^3.2.1"
     }
