--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
-        "moduleResolution": "node",
+        "module": "commonjs",
         "target": "es5",
-        "module":"es2015",
-        "lib": ["es2015", "es2016", "es2017", "dom"],
+        "moduleResolution": "node",
+        "types": ["long"],
+        "lib": ["es2015", "dom"],
         "strict": true,
         "sourceMap": true,
         "declaration": true,
@@ -15,5 +16,12 @@
         "typeRoots": [
           "node_modules/@types"
         ]
-    }
+    },
+    "exclude": [
+        "test",
+        "dist",
+        "coverage",
+        "node_modules",
+        "prototree"
+    ]
 }
